# llm-rules

./: .gitignore  README.md  pyproject.toml  scratch.py
assets/english_words/: adjectives.txt  bird.txt  countries.txt  country_adjectives.txt  english.txt  female_names.txt  fish.txt  french.txt  german.txt  kitchen_utensils.txt  malay.txt  male_names.txt  mammal.txt  musical_instruments.txt  negative.txt  nouns.txt  plant.txt  positive.txt  reptile.txt  sports_equipment.txt  tools.txt  unisex_names.txt  vehicles.txt  verbs.txt
llm_rules/: core.py  datasets.py  evaluate.py  model.py  prompt.py  utils.py
llm_rules/datasets/: __init__.py  animal_types.py  contains_part_of_speech.py  country_vs_not.py  debug.py  english_vs_french.py  exactly_k_words.py  languages.py  living_vs_nonliving.py  male_vs_female.py  numbers.py  sentiment.py  starting_letter.py  uppercase_vs_lowercase.py  utils.py
scripts/: download_english_words.py  make_audit_plots.py  make_custom_corpora.py  make_plots.py  preprocess_results.py  run_evaluate_freeform_art_gpt.py  run_evaluate_icl_art_gpt.py  run_evaluate_icl_cls_gpt.py  run_evaluate_mcq_art_gpt.py
tests/datasets/: test_init.py
